--- a/css/menu.css
+++ b/css/menu.css
@@ -611,8 +611,9 @@
 
     /* Мобильное меню */
     .nav,
+    .logo-img,
     .volume-control,
-    .logo-img {
+    .theme-toggle {
         display: none;
     }
 
@@ -635,10 +636,8 @@
         background: #000000e7;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        /* Центровка по вертикали */
-        align-items: center;
-        /* Центровка по горизонтали */
+        justify-content: center; /* Центровка по вертикали */
+        align-items: center; /* Центровка по горизонтали */
         z-index: 1000;
         padding: 20px;
         color: white;
