--- a/css/menu.css
+++ b/css/menu.css
@@ -14,8 +14,7 @@
     background: white;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 16px;
-    transition: transform 0.3s ease-in-out;
-    /* Плавное скрытие/появление */
+    transition: transform 0.3s ease-in-out; /* Плавное скрытие/появление */
     z-index: 10;
 }
 
@@ -535,7 +534,7 @@
 
 @media (max-width: 480px) {
 
-    /* Мобильное меню */
+    /* Адаптируем обычное меню под мобильное */
     .header {
         padding: 12px 16px;
         border-radius: 12px;
@@ -645,7 +644,13 @@
         transform: translateY(-10%);
         pointer-events: none;
         transition: opacity 0.4s ease, transform 0.4s ease;
-        z-index: 10;
+        z-index: 12;
+    }
+
+    .mobile-menu.hiding {
+        opacity: 0;
+        transform: translateY(-10%);
+        pointer-events: none;
     }
 
     .mobile-menu.show {
@@ -654,15 +659,64 @@
         pointer-events: auto;
     }
 
-    .mobile-menu__close {
+    .mobile-menu_content {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .mobile-theme-toggle {
         position: absolute;
-        top: 20px;
-        right: 20px;
+        top: 3px;
+        left: -1px;
+    }
+
+    .mobile-menu .theme-toggle {
+        display: block;
+        width: 48px;
+        height: 24px;
+    }
+
+    .mobile-menu .slider:before {
+        width: 16px;
+        height: 16px;
+    }
+
+
+    .mobile-menu_close {
+        position: absolute;
+        top: -5px;
+        right: -5px;
         background: none;
         border: none;
         font-size: 28px;
         color: #ffffff;
         cursor: pointer;
+    }
+
+    .mobile-theme-toggle,
+    .mobile-menu_close {
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 3s ease, visibility 0s linear 3s;
+    }
+
+    .mobile-menu.show .mobile-theme-toggle,
+    .mobile-menu.show .mobile-menu_close {
+        opacity: 1;
+        visibility: visible;
+        transition-delay: 0s;
+    }
+
+
+    .mobile-nav-wrapper {
+        flex: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
     }
 
     .mobile-nav {
@@ -671,7 +725,17 @@
         align-items: center;
         gap: 25px;
         font-size: 22px;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 3s ease, visibility 0s linear 3s;
     }
+
+    .mobile-menu.show .mobile-nav {
+        opacity: 1;
+        visibility: visible;
+        transition-delay: 0s;
+    }
+
 
     .mobile-nav a {
         color: rgb(212, 212, 212);
@@ -690,17 +754,16 @@
         position: absolute;
         bottom: 30px;
         left: 50%;
-        transform: translateX(-50%) translateY(20px);
+        transform: translateX(-120%) translateY(80px);
         opacity: 0;
         text-align: center;
         transition: opacity 1s ease, transform 1s ease;
-        transition-delay: 2s;
-        /* задержка перед началом анимации */
+        pointer-events: none;
     }
 
     .mobile-menu.show .mobile-logo {
         opacity: 1;
-        transform: translateX(-50%) translateY(0);
+        transform: translateX(-120%) translateY(0);
     }
 
     .mobile-logo img {
