--- a/css/modal_promo.css
+++ b/css/modal_promo.css
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 9999;
+  z-index: 11;
 }
 
 .promo-modal-card {
@@ -98,4 +98,43 @@
   font-size: 20px;
   cursor: pointer;
   line-height: 1;
+}
+
+@media (max-width: 480px) {
+  .promo-modal-card {
+    width: 90%;  /* чуть уже, чем 95% */
+    max-width: 460px; /* оставляем максимум тот же */
+  }
+
+  .promo-title {
+    font-size: 20px; /* уменьшили с 24px */
+    margin-bottom: 8px; /* чуть меньше отступ */
+  }
+
+  .promo-description {
+    font-size: 14px; /* уменьшили с 14px */
+    line-height: 1.3; /* чуть плотнее */
+  }
+
+  .promo-button {
+    padding: 12px;
+    font-size: 12px;    /* меньше шрифт */
+    border-radius: 10px;
+    margin-top: 16px;   /* чуть меньше отступ сверху */
+  }
+
+.promo-close {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background: rgba(0, 0, 0, 0.301);
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    font-size: 20px;
+    cursor: pointer;
+    line-height: 1;
+  }
 }
